objects/ssot__AiAgentTag__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentTagDefinitionId__c</fullName>
        <label>AI Agent Tag Definition Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Tag Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsFallback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fallback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__OrderNumber__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1748836583269_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentTag_AiAgentTagDefinitionId_ma_rel</label>
        <referenceTo>ssot__AiAgentTagDefinition__dlm</referenceTo>
        <relationshipLabel>AiAgentTag_AiAgentTagDefinitionId_ma_rel</relationshipLabel>
        <relationshipName>rel_1748836583269_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>